package com.ifmo.hatchery;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class HatcheryApplication {

    public static void main(String[] args) {
        SpringApplication.run(HatcheryApplication.class, args);
    }

}
