package com.ifmo.hatchery.model.system;

public enum BioState {
    USE, NOT_USE
}
