package com.ifmo.hatchery.model.system;

public enum BiomaterialType {
    MALE, FEMALE
}
