package com.ifmo.hatchery.service;

import org.springframework.stereotype.Service;

@Service
public class RoleService {

}
